@@ -20,6 +20,7 @@ trunk
 * added initialization to load OpenMx on swift workers
 * implemented omxParallelCI() to calculate confidence intervals in parallel
 * only calculating CIs for upper triangle of symmetric matrices
+* cleanup appearance of transient MxMatrix objects in error messages
 
 Release 1.0.0-1448 (September 30, 2010)
 =======================================
